<resources>
    <string name="app_name">UniRest</string>
    <string name="send_error_to_server">Send error to server</string>
    <string name="error_description">Error description</string>
    <string name="error_default_title">Unexpected error</string>
    <string name="error_default_description">This error is controlled\nThe screen you wanted to switch to is being developed</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="username">Username</string>
    <string name="dormitory">Dormitory</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat password</string>
    <string name="registering">Registering</string>
    <string name="email_or_username">Email or username</string>
    <string name="logging">Logging</string>
    <string name="login">Log in</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="dont_have_an_account">Don`t have an account?</string>
    <string name="scan">Scan</string>
    <string name="scan_again">Scan again</string>
    <string name="basic_registration_for_user_identification">Basic registration for user identification, after you settle in, the administrator will ask for more information</string>
    <string name="forgot_password">Forgot password</string>
    <string name="title_register">Register</string>
    <string name="title_authorization">Authorization</string>
    <string name="email_exists">This email already exists</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="password_not_equals">Password not equals</string>
    <string name="log_out">Log out</string>
    <string name="personal_information">Personal information</string>
    <string name="personal_list">Personal list</string>
    <string name="settings">Settings</string>
    <string name="my_payments">My payments</string>
    <string name="admin_utils">Admin utils</string>
    <string name="name">Name</string>
    <string name="second_name">Second name</string>
    <string name="surname">Surname</string>
    <string name="select_image">Select image</string>
    <string name="save">Save</string>
    <string name="course">Course</string>
    <string name="university_name">University name</string>
    <string name="phone">Phone</string>
    <string name="password_must_contains">Password must be contain more 6 symbols</string>
    <string name="select_floor">Select floor</string>
    <string name="floors">Floors</string>
    <string name="floor">Floor</string>
    <string name="count_cookers">Cookers count</string>
    <string name="count_washers">Washers count</string>
    <string name="select_room">Select room</string>
    <string name="room">Room</string>
    <string name="contact_with_commandant">Contact with commandant</string>
    <string name="additional_phones">Additional phones</string>
    <string name="leave_request">Leave request</string>
    <string name="call_all_to_me">Call all to me</string>
    <string name="balance">Balance</string>
    <string name="text_on_email">Text on email</string>
    <string name="call_on_phone">Call</string>
    <string name="expire">Expire</string>
    <string name="permit">Permit</string>
    <string name="success_upload">Success upload</string>
    <string name="fail_upload">Failed upload</string>
    <string name="short_name">Short name</string>
    <string name="call_to_me">Call to me</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="send">Send</string>
    <string name="call_to_me_now">Call to me now</string>
    <string name="add_to_notify">Add to list</string>
    <string name="dialog_add_user_notification">Add user to list for future create and send message</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="dialog_call_user_now">Call user now without creating message</string>
    <string name="you_calling_commandant">You calling commandant</string>
    <string name="new_alert">New alert</string>
    <string name="sent">Sent</string>
    <string name="error">Error</string>
    <string name="date">Date</string>
    <string name="author">Author</string>
    <string name="inputs_cant_be_empty">Inputs can`t be empty</string>
    <string name="success_registration_going_to_profile">Success registration changing to profile</string>
    <string name="moderate_payments">Moderate payments</string>
    <string name="moderate_requests">Moderate requests</string>
    <string name="commandant">Commandant</string>
    <string name="last_active">Last active</string>
    <string name="cooker_gas">Gas</string>
    <string name="cooker_electrical">Electrical</string>
    <string name="cooker_hybrid">Hybrid</string>
    <string name="cooker_none">None</string>
    <string name="cookers">Cookers</string>
    <string name="elevator_yes">Has elevator</string>
    <string name="elevator_no">Hasn`t elevator</string>
    <string name="total_beds">Total beds</string>
    <string name="total_taken_beds">Taken beds</string>
    <string name="total_free_beds">Free beds</string>
    <string name="mini_statistics">Mini statistics</string>
    <string name="notification_editor">Notification editor</string>
    <string name="profile_personalInfo">Here you can change your data or add those requested by the administrator</string>
    <string name="profile_paymentsInfo">Here you can add and view payments that have been completed by the administrator to be credited to the balance</string>
    <string name="profile_notificationEditorInfo">You have a list of users that you have added to send your own message, here you can change it and send it</string>
    <string name="profile_personalListInfo">Here you can add someone to your own hostel staff or change rights</string>
    <string name="profile_settingsInfo">Simple settings, theme, notification and more</string>
    <string name="profile_logoutInfo">Logout? Maybe you want to change your profile?</string>
    <string name="here_is_empty">Here is empty</string>
    <string name="remove_from_notification_list">Remove user from notification list, ater sending this user not receive this message</string>
    <string name="remove_from_list">Remove from list?</string>
    <string name="are_sure_logout">Aru you sure for logout</string>
    <string name="add_payment">Add payment</string>
    <string name="view_image">View image</string>
    <string name="moderated">Moderated</string>
    <string name="moderated_yes">Moderated by admin</string>
    <string name="moderated_no">Not moderated by admin</string>
    <string name="sum">Sum</string>
    <string name="download">Download</string>
    <string name="receipt">Receipt</string>
    <string name="select_date">Select</string>
    <string name="sum_description">If you enter the amount and other fields correctly, it will speed up the payment check and thus the credit to the balance</string>
    <string name="date_description">Specify the date written on the payment, this will also speed up the crediting to the balance</string>
    <string name="adding_payment">Adding payment</string>
    <string name="select_image_payment">Choose the right payment image, this is the most important point</string>
    <string name="not_found_image">Not found image</string>
    <string name="set_busy">Set busy</string>
    <string name="cant_busy">Can`t took it</string>
    <string name="success_busy">Success busy</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="will_be_free">Will be free</string>
    <string name="take_it">Take it</string>
    <string name="busy_since">Busy since</string>
    <string name="busy_for">Busy for</string>
    <string name="washer">Washer</string>
    <string name="minute_short">m</string>
    <string name="choose_time_washer">Choose time what washer will be busy</string>
    <string name="choose_time_cooker">Choose time what cooker will be busy</string>
    <string name="remind_when_done">Remind when done</string>
    <string name="free">Free</string>
    <string name="free_washer_description">After vacating the washing machine, someone else can take it</string>
    <string name="free_cooker_description">After vacating the cooker, someone else can take it</string>
    <string name="now_busy">Now busy</string>
    <string name="now_is_free">Now is free</string>
    <string name="selected_image_name">Selected image name</string>
    <string name="washers">Washers</string>
    <string name="cooker">Cooker</string>
    <string name="list_of_users">List of users</string>
    <string name="moderate">Moderate</string>
    <string name="requests">Requests</string>
    <string name="valid_payment_no">Payment not valid</string>
    <string name="valid_payment_yes">Payment valid</string>
    <string name="moderated_button_no">Payment not valid</string>
    <string name="moderated_button_yes">Payment valid</string>
    <string name="text_fab_options">Options</string>
    <string name="sort_by_acceding">By ascending order</string>
    <string name="sort_by_descending">By descending order</string>
    <string name="sort_by_date">By date</string>
    <string name="sort_by_sum">By sum</string>
    <string name="sort_by_moderate">By moderate</string>
    <string name="fab_sort_actions">Sort actions</string>
    <string name="fab_sort_group_by">Group by</string>
    <string name="dialog_valid_payment">Accurately check the check, amount, date of payment, and other values, after confirmation, the amount will be receipt to the user</string>
    <string name="dialog_re_moderate">If the payment is verified, you can cancel the action, then the balance will be changed for the user</string>
    <string name="server_not_enabled">Server not enabled navigation disabled</string>
    <string name="dialog_floor_not_user">You are not on your floor, are you sure you want to continue</string>
    <string name="notification_reminder">Reminder</string>
    <string name="notification_remind_washer">The washing machine has finished washing, please remove the items and release it</string>
    <string name="notification_remind_cooker">Your time on the stove is over, please release it</string>
    <string name="click_again_to_exit">Click again to exit</string>
    <string name="not_permission">You dont have permission</string>
    <string name="dialog_permit_barcode_view_permission">Scanning other users\' barcodes is prohibited for your role</string>
    <string name="text_login_not_valid">Password or email is wrong</string>
    <string name="dialog_permit_view_permission">Your role does not have sufficient permissions to view this data</string>
    <string name="search">Search</string>
    <string name="text_input_search">Input name or last name</string>
    <string name="only_in_my_dormitory">Only in my dormitory</string>
    <string name="add_user_to_room">Add user to room</string>
    <string name="remove_user_from_room">Remove user from room</string>
    <string name="dialog_remove_user_from_room">Remove user from room? You are not deleting user from database and you can again set user other room or this same</string>
    <string name="floor_side_full">Full</string>
    <string name="floor_side_left">Left</string>
    <string name="floor_side_right">Right</string>
    <string name="floor_side_central">Central</string>
    <string name="floor_side_small">Small</string>
    <string name="floor_side_large">Large</string>
    <string name="floor_side">Floor side</string>
    <string name="edit_cookers">Edit cookers</string>
    <string name="edit_washers">Edit washers</string>
</resources>