<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:text="@string/adding_payment"
        android:textColor="@color/text_primary"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:gravity="center_horizontal"
        android:text="@string/sum_description"
        android:textColor="@color/text_primary_half"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutBalance"
        style="@style/defaultInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sum">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editBalance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColor="@color/text_primary" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutDate"
            style="@style/defaultInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:enabled="false"
            android:hint="@string/date"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:paddingEnd="50dp"
                android:singleLine="true"
                android:textColor="@color/text_primary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectDate"
            style="@style/defaultMaterialButtonOutline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/select_date" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:text="@string/date_description"
        android:textColor="@color/text_primary_half"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/selectedImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="5dp"
        android:gravity="center_horizontal"
        android:text="@string/selected_image_name"
        android:textColor="@color/text_primary"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/select_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:gravity="center_horizontal"
        android:text="@string/select_image_payment"
        android:textColor="@color/text_primary_half"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:text="@string/send" />

</LinearLayout>