<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="@color/overlay_light"
        app:strokeColor="@color/text_primary_half">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/washer"
                android:textColor="@color/text_primary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_busy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/now_is_free"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/timeBusy"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:text="@string/busy_for"
                android:textColor="@color/text_primary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/timeElapsed"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:text="@string/busy_since"
                android:textColor="@color/text_primary"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/free"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonBusy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/set_busy" />

            <LinearLayout
                android:id="@+id/busyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="20dp"
                    android:text="@string/choose_time_washer"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:contentDescription="@string/busy_for"
                    android:stepSize="5"
                    android:value="20"
                    android:valueFrom="5"
                    android:valueTo="60"
                    app:thumbColor="@color/second"
                    app:tickColor="@color/orange_light"
                    app:trackColor="@color/overlay" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/remindCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:text="@string/remind_when_done"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp"
                    app:buttonTint="@color/input_password_color_selector" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonTake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/take_it" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>