<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/overlay_light"
        app:strokeColor="@color/overlay_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/text_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sum"
                android:textColor="@color/text_primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/date"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_moderated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moderated_no"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

            <TextView
                android:textStyle="bold"
                android:visibility="gone"
                android:id="@+id/text_valid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valid_payment_no"
                android:textColor="@color/text_primary"
                android:textSize="16sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>